--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "localConnectionString": "Server=DESKTOP-VV72QLO\\SQLEXPRESS;Database = WebApiDb;TrustServerCertificate=True;Trusted_Connection=True;"
   },
+  "JwtSetting": {
+    "Issuer": "ProductApi",
+    "Audience": "WebApiClient",
+    "DurationInMinutes": 10,
+    "Key": "ThisismySecretKeyOfAPi"
+
+  },
   "AllowedHosts": "*"
 }
